<resources>
    <string name="app_name">Tv Shows Reminder</string>
    <string name="plus">+</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="insert_season_number">season</string>
    <string name="insert_episode_number">episode</string>
    <string name="title_activity_settings">Settings</string>
    <string name="banner_ad_unit_id">ca-app-pub-6162413570337571/6329502047</string>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


    <color name="holo_blue_light">#ff33b5e5</color>

    <!-- Math Alarm Activity -->
    <string name="title_activity_set_alarms">Set Alarm</string>
    <string name="no_alarms">No alarms have been set</string>

    <string name="button_new">New</string>

    <!-- Menu -->
    <string name="menu_item_new">New</string>
    <string name="menu_item_save">Save</string>
    <string name="menu_item_delete">Cancel</string>
    <string name="menu_item_rate">Rate on Google Play</string>
    <string name="menu_item_website">Website</string>
    <string name="menu_item_report">Report a Bug</string>

    <!-- Alert -->
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="decimal_button_text">,</string>
    <string name="clear_button_text">Clear</string>
    <string name="minus_button_text">-</string>


    <color name="title_background_color">#000000</color>

    <string name="button_delete">Delete</string>

    <string name="Home">Home</string>
    <string name="Tutorial">Tutorial</string>
    <string name="Day_alarm">Day alarm</string>
    <string name="Top_10_series">Top 10 series</string>
    <string name="Alarms">Alarms</string>
    <string name="Send_feedback">Send feedback</string>
    <string name="Rate_App">Rate App</string>

    <string name="EPISODES_YOU_WATCHED">EPISODES YOU WATCHED</string>
    <string name="SWIPE_LEFT_OR_RIGHT">Swipe left or right to check as viewed</string>
    <string name="CLICK_FOR_MORE_OPTIONS">Click on series name for more options</string>

    <!-- Edit window -->
    <string name="I_WATCHED_EPISODE">I watched the next episode</string>
    <string name="Edit">Edit</string>
    <string name="STOP_TRACKING">Stop follow this series</string>
    <string name="MAKE_ALARM">Make alarm</string>
    <string name="Paused">Paused</string>
    <string name="There_is_no_data_for_this_episode">There is no data for this episode</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Are_you_sure_you_want_to_stop_following_this_series">Are you sure you want to stop
        following this series
    </string>
    <string name="please_select_the_series">please select the series</string>
    <string name="Search_the_series_Please_wait">Search the series. Please wait...</string>
    <string name="failed_to_find_this_series_continue_manually">failed to find this series, continue
        manually...
    </string>
    <string name="No_data_for_next_episode">No data for next episode</string>

    <!-- Tool Tips -->
    <string name="Press_here_for_add_series">"Press here to add series for tracking"</string>
    <string name="black">#000000</string>
    <string name="tutorial">Tutorial</string>
    <string name="day_alarm">Day alarm</string>
    <string name="top_10">Top 10</string>
    <string name="feedback">Feedback</string>
    <string name="sync">Sync</string>
    <string name="action_sign_in_short">הירשם</string>
    <string name="minimum_password">הסיסמא קצרה מדי, על הסיסמא להכיל לפחות 6 תווים</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up
    </string>
    <string name="send_password_reset_email">שלח מייל לאיפוס סיסמא</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">כתובת מייל</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_link_to_register">לא חבר? הירשם עכשיו</string>
    <string name="btn_link_to_login">רשום כבר. חבר אותי!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">שכחתי סיסמא</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>


    <string name="btn_login">התחבר</string>
    <string name="btn_remove">הסר</string>
    <string name="btn_reset_password">אפס סיסמא</string>
    <string name="btn_send">שלח</string>
    <string name="btn_sign_out">התנתק</string>
    <string name="change_email">שנה כתובת מייל</string>
    <string name="change_password">שנה סיסמא</string>
    <string name="email">כתובת מייל</string>
    <string name="eraseall">מחק הכל</string>
    <string name="forgot_password_msg">אנו צריכים את כתובת המייל שלך על מנת לשלוח לך קישור לאיפוס
        סיסמא
    </string>
    <string name="hint_password">סיסמא</string>
    <string name="lbl_forgot_password">שכחתי סיסמא</string>
    <string name="remove_user">הסר משתמש</string>
    <string name="want_to_delete_this_raw">האם אתה בטוח כי ברצונך למחוק את כל המידע?</string>
    <string name="left_more">"נותרו עוד "</string>
    <string name="lists_for_wedding_day">רשימה ליום האירוע</string>
    <string name="user_data">חשבון</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
