<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/tools"

    android:paddingBottom="0dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"

    android:background="#e4e3e4"
>




    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:id="@+id/imageView"
        android:background="@drawable/swipe_picture"
        android:visibility="invisible"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="73dp"
        android:layout_alignParentBottom="false"
        android:layout_marginTop="255dp" android:layout_alignParentRight="true"/>

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#656565"
        android:id="@+id/textView9"
        android:layout_below="@+id/imageView"
        android:textStyle="normal"
        android:gravity="center"
        android:visibility="invisible"
        android:textSize="14dp"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="60dp"
        android:text="@string/SWIPE_LEFT_OR_RIGHT" android:layout_alignParentRight="true"/>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:divider="#e4e3e4"
        android:dividerHeight="5sp"
        android:fastScrollEnabled="false"
        android:fastScrollAlwaysVisible="false"
        android:layout_below="@+id/textView19"
        android:layout_above="@+id/adView"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"/>

    <ScrollView android:fillViewport="true"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp">
        <LinearLayout android:id="@+id/dismissable_container"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical" />
    </ScrollView>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginStart="30dp"
        android:layout_above="@+id/adView"
        android:layout_marginBottom="25dp"
        android:src="@drawable/new_plus_tv"
        android:clickable="true"
        app:backgroundTint="@color/colorAccent"
        app:fabSize="normal"
        app:backgroundTintMode="src_in"
        app:pressedTranslationZ="12dp" android:layout_marginLeft="30dp"/>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/linprogress">
        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar2" android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>
        <TextView
            android:text="משחזר מידע מהשרת"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView8"
            android:layout_gravity="center_horizontal" android:gravity="center_horizontal"/>
    </LinearLayout>
    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:id="@+id/imageView2"
        android:background="@drawable/icon_click"
        android:visibility="invisible"
        android:layout_alignTop="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="73dp" android:layout_alignParentLeft="true"/>

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/CLICK_FOR_MORE_OPTIONS"
        android:textColor="#656565"
        android:id="@+id/textView10"
        android:textStyle="normal"
        android:gravity="center"
        android:visibility="invisible"
        android:textSize="14dp"
        android:layout_alignBottom="@+id/textView9"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="60dp" android:layout_alignParentLeft="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/EPISODES_YOU_WATCHED"
        android:id="@+id/textView19"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="14dp"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="8dp"/>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>



</RelativeLayout>
    <!--android:background ="#74d4d2d2"-->
